--- a/index.html
+++ b/index.html
@@ -381,9 +381,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/data.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/data-updated.js"></script>
     <script src="js/charts.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main-updated.js"></script>
 </body>
 </html>
 
